# vrep-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: example_path.cpp  example_pointcloud.cpp
examples/include/: example_path.h
include/: blah.h  example_pointcloud.h  vrep_kinect.h  vrep_path.h  vrep_utils.h
scenes/: sample.ttt  vrep_path_code
src/: blah.cpp  example_pointcloud.cpp  vrep_kinect.cpp  vrep_path.cpp  vrep_utils.cpp
